<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="name">Enter your name here</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">ORDER</string>


    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Whipped Cream: <xliff:g id="hasWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Chocolate: <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="10">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="20$">%s</xliff:g></string>
    <string name="thank_you">Thank You!</string>
</resources>
